openshift-logging/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-15T18:37:50Z"
    labels:
      name: cluster-logging-operator
      operators.coreos.com/cluster-logging.openshift-logging: ""
    name: cluster-logging-operator-metrics
    namespace: openshift-logging
    resourceVersion: "472847093"
    uid: f2240528-368e-4dd4-aed8-35f4b42cd1be
  subsets:
  - addresses:
    - ip: 10.128.20.9
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: cluster-logging-operator-66cfd7589d-dj7ls
        namespace: openshift-logging
        resourceVersion: "472847091"
        uid: ff427def-d66c-4113-81ff-15f5647260e7
    ports:
    - name: http-metrics
      port: 8686
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-15T20:19:21Z"
    labels:
      logging-infra: support
    name: collector
    namespace: openshift-logging
    resourceVersion: "491646552"
    uid: d8ea519e-ebd2-4e92-bdda-e639c57b0aa7
  subsets:
  - addresses:
    - ip: 10.128.0.90
      nodeName: ocp4azu-sj2sl-master-2
      targetRef:
        kind: Pod
        name: collector-qtmbq
        namespace: openshift-logging
        resourceVersion: "465633592"
        uid: 976046db-3173-477d-899d-8b0ee7fc062a
    - ip: 10.128.20.3
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: collector-hjrtc
        namespace: openshift-logging
        resourceVersion: "472847209"
        uid: def648f4-5d63-44e2-967f-ab9f4d1ccd46
    - ip: 10.128.22.12
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: collector-f7xrc
        namespace: openshift-logging
        resourceVersion: "476624585"
        uid: c369c781-2ab1-4b99-9162-8fa6bb13e105
    - ip: 10.129.0.99
      nodeName: ocp4azu-sj2sl-master-0
      targetRef:
        kind: Pod
        name: collector-9bfnv
        namespace: openshift-logging
        resourceVersion: "4184145"
        uid: a390ac37-285d-41b2-8bee-fa4a6ef6955a
    - ip: 10.129.16.14
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
      targetRef:
        kind: Pod
        name: collector-pr2zj
        namespace: openshift-logging
        resourceVersion: "472917877"
        uid: 60cd4d8d-92e9-44fb-86d4-322491cb3338
    - ip: 10.129.22.3
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
      targetRef:
        kind: Pod
        name: collector-7w6j9
        namespace: openshift-logging
        resourceVersion: "380476297"
        uid: 43587add-67f8-4f1f-aed9-305409023c70
    - ip: 10.129.4.4
      nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
      targetRef:
        kind: Pod
        name: collector-pt7pq
        namespace: openshift-logging
        resourceVersion: "467286866"
        uid: 87242b32-a40c-4dba-b7c9-2f0b579ef65f
    - ip: 10.129.6.2
      nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
      targetRef:
        kind: Pod
        name: collector-k5slf
        namespace: openshift-logging
        resourceVersion: "458211530"
        uid: ebeedf50-b538-4c3f-9f6a-b7fbdfe5006e
    - ip: 10.129.8.2
      nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
      targetRef:
        kind: Pod
        name: collector-8j4mf
        namespace: openshift-logging
        resourceVersion: "460420464"
        uid: 06b71671-d3b1-47c2-a0a4-13a01d43a577
    - ip: 10.130.0.167
      nodeName: ocp4azu-sj2sl-master-1
      targetRef:
        kind: Pod
        name: collector-9zmfl
        namespace: openshift-logging
        resourceVersion: "143105688"
        uid: d4c2136b-e5b3-49aa-8eed-d806ac5fc33c
    - ip: 10.130.16.5
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: collector-vhnvf
        namespace: openshift-logging
        resourceVersion: "467404227"
        uid: 7146f6a1-8a7e-46f3-8088-1f7f3be3622b
    - ip: 10.130.20.7
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: collector-qxvnr
        namespace: openshift-logging
        resourceVersion: "476625004"
        uid: fa7e1f94-ce15-40cf-818f-73ed919347ac
    - ip: 10.130.22.3
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: collector-rpfb6
        namespace: openshift-logging
        resourceVersion: "428583644"
        uid: cb95ad5a-23dc-4f53-b615-05d6922bab30
    - ip: 10.131.18.5
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: collector-qh49v
        namespace: openshift-logging
        resourceVersion: "491646550"
        uid: 0333f6b7-2589-47c1-bbf3-aa17a64c1019
    - ip: 10.131.22.14
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: collector-wjpf6
        namespace: openshift-logging
        resourceVersion: "466147237"
        uid: 3f528f11-61c0-4303-8b25-975f1a312f1b
    ports:
    - name: logfile-metrics
      port: 2112
      protocol: TCP
    - name: metrics
      port: 24231
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-15T20:18:53Z"
    labels:
      cluster-name: elasticsearch
    name: elasticsearch
    namespace: openshift-logging
    resourceVersion: "467286879"
    uid: 43da93aa-11a6-49a2-9062-127cfd896d86
  subsets:
  - addresses:
    - ip: 10.129.4.121
      nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-3-66994f5b9f-wcxsj
        namespace: openshift-logging
        resourceVersion: "467286867"
        uid: 9c9c138d-687e-40a9-a74b-ad50f3549970
    - ip: 10.129.6.61
      nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-1-76d4647dfc-9nl7c
        namespace: openshift-logging
        resourceVersion: "458257845"
        uid: f698a15d-1ead-4fb5-b8e8-701e5a5bd793
    - ip: 10.129.9.203
      nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-2-6fbf7999d4-hs8pb
        namespace: openshift-logging
        resourceVersion: "460420415"
        uid: 889089be-a1ab-4c13-857d-6cf615fca88f
    ports:
    - name: elasticsearch
      port: 60000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-15T20:18:53Z"
    labels:
      cluster-name: elasticsearch
    name: elasticsearch-cluster
    namespace: openshift-logging
    resourceVersion: "458257112"
    uid: 34aa9b83-3f93-44dc-b671-e135f440b424
  subsets:
  - addresses:
    - ip: 10.129.4.121
      nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-3-66994f5b9f-wcxsj
        namespace: openshift-logging
        resourceVersion: "458219949"
        uid: 9c9c138d-687e-40a9-a74b-ad50f3549970
    - ip: 10.129.6.61
      nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-1-76d4647dfc-9nl7c
        namespace: openshift-logging
        resourceVersion: "458257111"
        uid: f698a15d-1ead-4fb5-b8e8-701e5a5bd793
    - ip: 10.129.9.203
      nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-2-6fbf7999d4-hs8pb
        namespace: openshift-logging
        resourceVersion: "458219931"
        uid: 889089be-a1ab-4c13-857d-6cf615fca88f
    ports:
    - name: elasticsearch
      port: 9300
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-15T20:18:53Z"
    labels:
      cluster-name: elasticsearch
      scrape-metrics: enabled
    name: elasticsearch-metrics
    namespace: openshift-logging
    resourceVersion: "467286872"
    uid: 4f2b33f4-3568-4b96-9d60-6aa910036726
  subsets:
  - addresses:
    - ip: 10.129.4.121
      nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-3-66994f5b9f-wcxsj
        namespace: openshift-logging
        resourceVersion: "467286867"
        uid: 9c9c138d-687e-40a9-a74b-ad50f3549970
    - ip: 10.129.6.61
      nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-1-76d4647dfc-9nl7c
        namespace: openshift-logging
        resourceVersion: "458257845"
        uid: f698a15d-1ead-4fb5-b8e8-701e5a5bd793
    - ip: 10.129.9.203
      nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
      targetRef:
        kind: Pod
        name: elasticsearch-cdm-07rnwmwx-2-6fbf7999d4-hs8pb
        namespace: openshift-logging
        resourceVersion: "460420415"
        uid: 889089be-a1ab-4c13-857d-6cf615fca88f
    ports:
    - name: elasticsearch
      port: 60001
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-15T20:18:59Z"
    labels:
      logging-infra: support
    name: kibana
    namespace: openshift-logging
    resourceVersion: "467286849"
    uid: 3f4ce058-1c75-4464-bc77-414531dad37d
  subsets:
  - addresses:
    - ip: 10.129.4.61
      nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
      targetRef:
        kind: Pod
        name: kibana-b6969687b-qbgrx
        namespace: openshift-logging
        resourceVersion: "467286847"
        uid: 89aa9a36-001a-4d28-a1fe-20a3de94b59a
    ports:
    - port: 3000
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
