openshift-logging/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.20.9
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: cluster-logging-operator-66cfd7589d-dj7ls
      namespace: openshift-logging
      resourceVersion: "472847091"
      uid: ff427def-d66c-4113-81ff-15f5647260e7
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-15T18:37:50Z"
    generateName: cluster-logging-operator-metrics-
    generation: 55
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: cluster-logging-operator-metrics
      name: cluster-logging-operator
      operators.coreos.com/cluster-logging.openshift-logging: ""
    name: cluster-logging-operator-metrics-tbmwr
    namespace: openshift-logging
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: cluster-logging-operator-metrics
      uid: d25ff539-ef93-432e-8d11-7d99794801fa
    resourceVersion: "472847094"
    uid: fd0f8789-ffbd-4226-9179-8a7d081a92c3
  ports:
  - name: http-metrics
    port: 8686
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.0.99
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-0
    targetRef:
      kind: Pod
      name: collector-9bfnv
      namespace: openshift-logging
      resourceVersion: "4184145"
      uid: a390ac37-285d-41b2-8bee-fa4a6ef6955a
    zone: brazilsouth-1
  - addresses:
    - 10.128.0.90
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-2
    targetRef:
      kind: Pod
      name: collector-qtmbq
      namespace: openshift-logging
      resourceVersion: "465633592"
      uid: 976046db-3173-477d-899d-8b0ee7fc062a
    zone: brazilsouth-3
  - addresses:
    - 10.129.4.4
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
    targetRef:
      kind: Pod
      name: collector-pt7pq
      namespace: openshift-logging
      resourceVersion: "467286866"
      uid: 87242b32-a40c-4dba-b7c9-2f0b579ef65f
    zone: brazilsouth-3
  - addresses:
    - 10.129.6.2
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
    targetRef:
      kind: Pod
      name: collector-k5slf
      namespace: openshift-logging
      resourceVersion: "458211530"
      uid: ebeedf50-b538-4c3f-9f6a-b7fbdfe5006e
    zone: brazilsouth-2
  - addresses:
    - 10.129.8.2
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
    targetRef:
      kind: Pod
      name: collector-8j4mf
      namespace: openshift-logging
      resourceVersion: "460420464"
      uid: 06b71671-d3b1-47c2-a0a4-13a01d43a577
    zone: brazilsouth-1
  - addresses:
    - 10.129.16.14
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
    targetRef:
      kind: Pod
      name: collector-pr2zj
      namespace: openshift-logging
      resourceVersion: "472917877"
      uid: 60cd4d8d-92e9-44fb-86d4-322491cb3338
    zone: brazilsouth-1
  - addresses:
    - 10.130.16.5
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: collector-vhnvf
      namespace: openshift-logging
      resourceVersion: "467404227"
      uid: 7146f6a1-8a7e-46f3-8088-1f7f3be3622b
    zone: brazilsouth-2
  - addresses:
    - 10.131.18.5
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
    targetRef:
      kind: Pod
      name: collector-qh49v
      namespace: openshift-logging
      resourceVersion: "491646550"
      uid: 0333f6b7-2589-47c1-bbf3-aa17a64c1019
    zone: brazilsouth-1
  - addresses:
    - 10.128.20.3
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: collector-hjrtc
      namespace: openshift-logging
      resourceVersion: "472847209"
      uid: def648f4-5d63-44e2-967f-ab9f4d1ccd46
    zone: brazilsouth-2
  - addresses:
    - 10.130.20.7
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: collector-qxvnr
      namespace: openshift-logging
      resourceVersion: "476625004"
      uid: fa7e1f94-ce15-40cf-818f-73ed919347ac
    zone: brazilsouth-1
  - addresses:
    - 10.129.22.3
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
    targetRef:
      kind: Pod
      name: collector-7w6j9
      namespace: openshift-logging
      resourceVersion: "380476297"
      uid: 43587add-67f8-4f1f-aed9-305409023c70
    zone: brazilsouth-1
  - addresses:
    - 10.130.22.3
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
    targetRef:
      kind: Pod
      name: collector-rpfb6
      namespace: openshift-logging
      resourceVersion: "428583644"
      uid: cb95ad5a-23dc-4f53-b615-05d6922bab30
    zone: brazilsouth-2
  - addresses:
    - 10.130.0.167
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-1
    targetRef:
      kind: Pod
      name: collector-9zmfl
      namespace: openshift-logging
      resourceVersion: "143105688"
      uid: d4c2136b-e5b3-49aa-8eed-d806ac5fc33c
    zone: brazilsouth-2
  - addresses:
    - 10.131.22.14
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: collector-wjpf6
      namespace: openshift-logging
      resourceVersion: "466147237"
      uid: 3f528f11-61c0-4303-8b25-975f1a312f1b
    zone: brazilsouth-3
  - addresses:
    - 10.128.22.12
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: collector-f7xrc
      namespace: openshift-logging
      resourceVersion: "476624585"
      uid: c369c781-2ab1-4b99-9162-8fa6bb13e105
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-15T20:19:21Z"
    generateName: collector-
    generation: 636
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: collector
      logging-infra: support
    name: collector-mc86w
    namespace: openshift-logging
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: collector
      uid: da6e2424-512e-44cf-9b2e-96224614c4ad
    resourceVersion: "491646553"
    uid: 5385914e-fa5e-4d81-8f0c-423549a4e5c1
  ports:
  - name: metrics
    port: 24231
    protocol: TCP
  - name: logfile-metrics
    port: 2112
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.4.121
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-3-66994f5b9f-wcxsj
      namespace: openshift-logging
      resourceVersion: "467286867"
      uid: 9c9c138d-687e-40a9-a74b-ad50f3549970
    zone: brazilsouth-3
  - addresses:
    - 10.129.9.203
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-2-6fbf7999d4-hs8pb
      namespace: openshift-logging
      resourceVersion: "460420415"
      uid: 889089be-a1ab-4c13-857d-6cf615fca88f
    zone: brazilsouth-1
  - addresses:
    - 10.129.6.61
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-1-76d4647dfc-9nl7c
      namespace: openshift-logging
      resourceVersion: "458257845"
      uid: f698a15d-1ead-4fb5-b8e8-701e5a5bd793
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-15T20:18:53Z"
    generateName: elasticsearch-cluster-
    generation: 138
    labels:
      cluster-name: elasticsearch
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: elasticsearch-cluster
    name: elasticsearch-cluster-ftmcl
    namespace: openshift-logging
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: elasticsearch-cluster
      uid: e1ba1526-3ed1-4c0b-8940-a22ebc24ca68
    resourceVersion: "467286873"
    uid: 820f8698-4207-4cb6-8184-52b82344663c
  ports:
  - name: elasticsearch
    port: 9300
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.4.121
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-3-66994f5b9f-wcxsj
      namespace: openshift-logging
      resourceVersion: "467286867"
      uid: 9c9c138d-687e-40a9-a74b-ad50f3549970
    zone: brazilsouth-3
  - addresses:
    - 10.129.9.203
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-2-6fbf7999d4-hs8pb
      namespace: openshift-logging
      resourceVersion: "460420415"
      uid: 889089be-a1ab-4c13-857d-6cf615fca88f
    zone: brazilsouth-1
  - addresses:
    - 10.129.6.61
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-1-76d4647dfc-9nl7c
      namespace: openshift-logging
      resourceVersion: "458257845"
      uid: f698a15d-1ead-4fb5-b8e8-701e5a5bd793
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-15T20:18:53Z"
    generateName: elasticsearch-
    generation: 138
    labels:
      cluster-name: elasticsearch
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: elasticsearch
    name: elasticsearch-ggsx5
    namespace: openshift-logging
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: elasticsearch
      uid: d3274766-3829-41d1-ac13-7fb804578c71
    resourceVersion: "467286876"
    uid: 724a9522-7bec-40ac-b427-c3b5ac42db59
  ports:
  - name: elasticsearch
    port: 60000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.4.121
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-3-66994f5b9f-wcxsj
      namespace: openshift-logging
      resourceVersion: "467286867"
      uid: 9c9c138d-687e-40a9-a74b-ad50f3549970
    zone: brazilsouth-3
  - addresses:
    - 10.129.9.203
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-2-6fbf7999d4-hs8pb
      namespace: openshift-logging
      resourceVersion: "460420415"
      uid: 889089be-a1ab-4c13-857d-6cf615fca88f
    zone: brazilsouth-1
  - addresses:
    - 10.129.6.61
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
    targetRef:
      kind: Pod
      name: elasticsearch-cdm-07rnwmwx-1-76d4647dfc-9nl7c
      namespace: openshift-logging
      resourceVersion: "458257845"
      uid: f698a15d-1ead-4fb5-b8e8-701e5a5bd793
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-15T20:18:53Z"
    generateName: elasticsearch-metrics-
    generation: 138
    labels:
      cluster-name: elasticsearch
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: elasticsearch-metrics
      scrape-metrics: enabled
    name: elasticsearch-metrics-xcm6f
    namespace: openshift-logging
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: elasticsearch-metrics
      uid: 0a259b26-d4ec-4c24-9ec6-bc9887145d01
    resourceVersion: "467286877"
    uid: 033d6aac-1ad2-48dd-ab66-002179f52299
  ports:
  - name: elasticsearch
    port: 60001
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.4.61
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
    targetRef:
      kind: Pod
      name: kibana-b6969687b-qbgrx
      namespace: openshift-logging
      resourceVersion: "467286847"
      uid: 89aa9a36-001a-4d28-a1fe-20a3de94b59a
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-15T20:18:59Z"
    generateName: kibana-
    generation: 40
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: kibana
      logging-infra: support
    name: kibana-vnxlx
    namespace: openshift-logging
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: kibana
      uid: 9fe6e8ae-e83e-4122-964d-f86c220fd72c
    resourceVersion: "467286848"
    uid: 87b8bc85-1197-44be-973c-9bad024d7906
  ports:
  - name: ""
    port: 3000
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
