openshift-logging/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-15T20:18:59Z"
    labels:
      component: support
      logging-infra: support
      provider: openshift
    name: kibana
    namespace: openshift-logging
    ownerReferences:
    - apiVersion: logging.openshift.io/v1
      controller: true
      kind: Kibana
      name: kibana
      uid: 1833afe9-ac10-4bd4-aded-48bfc4297f24
    resourceVersion: "4183724"
    uid: aee906de-8bb8-4ec5-a382-4979952bb39d
  spec:
    host: kibana-openshift-logging.apps.ocp4azu.dirtrab.cl
    tls:
      destinationCACertificate: |
        -----BEGIN CERTIFICATE-----
        MIIFtDCCA5ygAwIBAgIBADANBgkqhkiG9w0BAQ0FADBrMR0wCQYDVQQGEwJpbzAQ
[...]
        34QsV5qo8bv55uIaLmeYCRsRS2SatS5y
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: kibana
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-15T20:18:59Z"
        status: "True"
        type: Admitted
      host: kibana-openshift-logging.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
